# vanadium

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  README.md  build.zig  build.zig.zon  compile_commands.json
include/: vanadium.h  vanadium.hpp
include/vanadium/: iterator.hpp  types.hpp  util_macros.hpp
include/vanadium/diagnostics/: colors.hpp  diagnostics.hpp
include/vanadium/parser/: ast.hpp  errors.hpp  lexer.hpp  parser.hpp  pmacros.hpp
src/: main.cpp  main.rs  main.zig  utils.zig
src/diagnostics/: diagnostics.cpp
src/parser/: ast.cpp  ast.rs  helpers.zig  lexer.cpp  lexer.zig  mod.rs  parser.cpp  parser.zig  tokenstream.zig
syntax/: vanadium.vim
